<resources>
    <string name="app_name">WearBoy</string>
    <string name="hello_round">Hello Round World!</string>
    <string name="hello_square">Hello Square World!</string>
    <string name="log_custom_event_button_title">Custom Event</string>
    <string name="submit_feedback_button_title">Submit Feedback</string>
    <string name="log_purchase_button_title">Log Purchase</string>
    <string name="increment_attribute_button_title">Increment Attribute</string>
    <string name="log_round_screen_button_title">Log Round Screen</string>
    <string name="log_square_screen_button_title">Log Square Screen</string>
</resources>
