<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/appboy_blue"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- These views are included to get all of the buttons onscreen when hardware insets are present (like on the moto 360)-->
            <View
                android:layout_width="wrap_content"
                android:layout_height="25dp"/>
            <Button
                android:id="@+id/wearboy_log_custom_event_button"
                android:text="@string/log_custom_event_button_title"
                style="@style/AppboyTesterButton"/>
            <Button
                android:id="@+id/wearboy_submit_feedback_button"
                android:text="@string/submit_feedback_button_title"
                style="@style/AppboyTesterButton"/>
            <Button
                android:id="@+id/wearboy_log_purchase_button"
                android:text="@string/log_purchase_button_title"
                style="@style/AppboyTesterButton"/>
            <Button
                android:id="@+id/wearboy_increment_custom_attribute_button"
                android:text="@string/increment_attribute_button_title"
                style="@style/AppboyTesterButton"/>
            <Button
                android:id="@+id/wearboy_set_screen_type_round_button"
                android:text="@string/log_round_screen_button_title"
                style="@style/AppboyTesterButton"/>
            <Button
                android:id="@+id/wearboy_set_screen_type_square_button"
                android:text="@string/log_square_screen_button_title"
                style="@style/AppboyTesterButton"/>
            <View
                android:layout_width="wrap_content"
                android:layout_height="25dp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>